--- a/tetris/index.html
+++ b/tetris/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <strong>Puntuación: </strong><span id="score">0</span>
     <canvas></canvas>
     <script type="module" src="./main.js"></script>
 </body>
