--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js 100</title>
-    <script type="module" src="">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>js 100</title>
+  <script type="module" src="index.js">
 
-    </script>
+  </script>
 </head>
 
 <body>
-    <a href="/tetris/">fail</a>
+  <main class="projects"></main>
 </body>
 
 </html>
