--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>js 100</title>
-  <script type="module" src="index.js">
-
-  </script>
+  <script type="module" src="index.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
